# ecoflow-sdk

./: .gitignore  LICENSE  README.md
.github/workflows/: python-ci.yml  python-release.yml
python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
python/docs/plans/: 2026-05-30-wave3-phase1-foundation.md  2026-05-30-wave3-phase2-connection.md
python/src/ecoflow/: __init__.py  auth.py  client.py  const.py  exceptions.py
python/src/ecoflow/devices/: __init__.py  base.py  battery.py  discovered.py  inverter.py  meter.py  panel.py  plug.py  stream_ac_pro.py  stream_ultra.py  wave3.py
python/src/ecoflow/models/: __init__.py  battery.py  meter.py  plug.py  stream_ultra.py  wave3.py
python/src/ecoflow/transport/: __init__.py  mqtt.py  rest.py
python/tests/: .env.example  conftest.py  test_auth.py  test_client.py  test_const.py  test_device_base.py  test_device_battery.py  test_device_discovered.py  test_device_events.py  test_device_inverter.py  test_device_meter.py  test_device_panel.py  test_device_plug.py  test_device_stream_ultra.py  test_device_wave3.py  test_exceptions.py  test_init_files.py  test_models_battery.py  test_models_meter.py  test_models_plug.py  test_models_stream_ultra.py  test_models_wave3.py  test_mqtt.py  test_package_exports.py  test_rest.py  test_scaffold.py  test_toplevel_exports.py  test_vector_infrastructure.py  test_write_gate.py
python/tests/e2e/: test_read.py
python/tests/e2e/write/: test_write_plug.py
python/tests/vectors/battery/: payload_status.expected.json  payload_status.json
python/tests/vectors/smart_meter/: payload_status.expected.json  payload_status.json
python/tests/vectors/smart_plug/: payload_power.expected.json  payload_power.json
python/tests/vectors/stream_ultra/: payload_status.expected.json  payload_status.json
python/tests/vectors/wave3/: payload_empty.expected.json
