[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoflow-python"
version = "0.2.0"
description = "Python library for controlling and monitoring EcoFlow energy devices"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "ecoflow", "smart home", "energy", "battery", "mqtt", "iot",
    "home automation", "stream", "delta", "river", "powerstream",
]
authors = [
    { name = "Diego Colombo" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27",
    "aiomqtt>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "respx>=0.21",
    "ruff>=0.6",
    "pyright>=1.1",
    "python-dotenv>=1.0",
]

[project.urls]
Source        = "https://github.com/colombod/ecoflow-sdk"
Documentation = "https://github.com/colombod/ecoflow-sdk/tree/main/python"
"Bug Tracker" = "https://github.com/colombod/ecoflow-sdk/issues"
Changelog     = "https://github.com/colombod/ecoflow-sdk/blob/main/python/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ecoflow = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: read-only E2E tests against real EcoFlow accounts",
    "write_integration: write E2E tests that alter real device state (requires double opt-in)",
    "slow: slow tests",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
